--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>first index</title>
+	<title>index page</title>
 </head>
 <body>
 	<h1>Hello World!  I am in the greatest bootcamp</h1>
